--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <form action="">
         <div><label for="i-name">Imie<input type="text" required id="i-name"></label></div>
         <div><label for="i-surname">Nazwisko<input type="text" required id="i-surname"></label></div>
-        <div><label for="i-phone">Numer telefonu<input type="number" required id="i-phone"></label></div>
+        <div><label for="i-phone">Numer telefonu<input type="tel" required id="i-phone"></label></div>
     </form>
 
     <button>Wyświetl dane</button>
